# network_tracer

./: CMakeLists.txt  README.md  cornell_box.txt  interpreter.py  ray_client.py
src/: CMakeLists.txt  bvh.cpp  bvh.h  camera.cpp  camera.h  jsonparser.cpp  jsonparser.h  parser.cpp  parser.h  pixels.cpp  pixels.h  world.cpp  world.h
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  color.h  constants.h  hit.cpp  hit.h  material.cpp  material.h  object.cpp  object.h  random.cpp  random.h  ray.cpp  ray.h  texture.cpp  texture.h  vector3d.cpp
src/materials/: CMakeLists.txt  diffuse.cpp  diffuse.h  glass.cpp  glass.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h  specular.cpp  specular.h
src/objects/: CMakeLists.txt  constantmedium.cpp  constantmedium.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/textures/: CMakeLists.txt  checkerboard.cpp  checkerboard.h  gradient.cpp  gradient.h  image.cpp  image.h  marble.cpp  normal.cpp  normal.h  solid.cpp  solid.h  swirl.cpp  swirl.h
test/: CMakeLists.txt  network_tracer.cpp  test-fog.cpp  test-intersect.cpp  test-pixels.cpp  test-vector3d.cpp  test_camera.cpp  test_material.cpp  test_random.cpp  test_triangle.cpp  tracer.cpp
